# rule-engine

./: .gitignore  README.md  pyproject.toml
rule_engine/: rule_engine.py
tests/: test_expr_parser.py
