[tool.poetry]
name = "rule_engine"
version = "0.0.32"
description = "Computes a result by applying boolean logic equations up multiple columns of tabular data"
authors = ["Veit Wehner <veit.wehner@siemens.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pyopenssl = "^20.0.1"
sqlalchemy = "1.3.13"
boolean-parser = "^0.1.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "nexus"
url = "https://nexus3.private.dev.railigent.com/repository/pypi/simple"
default=true
